# ckanext-permissions

./: README.md  check_access.patch  pyproject.toml  setup.cfg  test.ini
.github/patch/: check-access.patch
.github/workflows/: test.yml
ckanext/permissions/: config_declaration.yaml  const.py  default_group.yaml  helpers.py  interfaces.py  model.py  permission_group_example.yaml  plugin.py  types.py  utils.py
ckanext/permissions/assets/: script.js  webassets.yml
ckanext/permissions/assets/css/: style.css  style.css.map
ckanext/permissions/implementation/: permission_labels.py
ckanext/permissions/logic/: action.py  auth.py  schema.py  validators.py
ckanext/permissions/templates/: page.html
ckanext/permissions/tests/: conftest.py  test_actions.py  test_autoassign.py  test_helpers.py  test_parse_permission_groups.py  test_plugin.py  test_roles.py  test_utils.py  test_validators.py
ckanext/permissions/tests/actions/: test_permission.py  test_role.py
ckanext/permissions/tests/data/: test_group.yaml
ckanext/permissions/theme/: styles.scss  tristate-checkbox.scss
ckanext/permissions_manager/: helpers.py  plugin.py  views.py
ckanext/permissions_manager/assets/: webassets.yml
ckanext/permissions_manager/assets/css/: style.css  style.css.map
ckanext/permissions_manager/assets/js/: perm-tom-select.js
ckanext/permissions_manager/templates/: header.html  page.html
ckanext/permissions_manager/templates/organization/: read_base.html
ckanext/permissions_manager/templates/perm_manager/: add_role.html  base.html  edit_role.html  edit_user_roles.html  list.html  pager.html  record.html  role_list.html  user_roles_list.html  user_roles_table.html
ckanext/permissions_manager/theme/: acl.scss  checkbox.scss  header.scss  readme.txt  styles.scss
(+5 files in other folders)
